# raiffeisen-agentic-ai-training

./: 02_simple_retrieval_TFIDF.ipynb  04_smolagents.ipynb  AGENDA.md  LICENSE  RAG_Vis_Agent.ipynb  README.md  [Answer]02_simple_retrieval_TFIDF.ipynb  [Answer]03_semantic_retrieval.ipynb  [Answer]04_smolagents.ipynb  api_key.md  main.py  pyproject.toml  requirements.txt
Notebooks/Day 1/: 02_Advanced_Prompting.ipynb  02_Using_Endpoints_With_llamaindex.ipynb  02_simple_retrieval_TFIDF.ipynb  05_simple_retrieval_TFIDF.ipynb  [Answer]02_simple_retrieval_TFIDF.ipynb
Notebooks/Retrieval/: 02_simple_retrieval_TFIDF.ipynb  [Answer]02_simple_retrieval_TFIDF.ipynb
data/: financial_retrieval_corpus.parquet  financial_retrieval_corpus_index.all-MiniLM-L6-v2.faiss  financial_retrieval_queries.parquet  my_index.faiss
data/financial-news-dataset/: data-00000-of-00001.arrow  dataset_info.json  state.json
data/financial_retrieval_corpus/: data-00000-of-00001.arrow  dataset_info.json  state.json
notebooks/day_1/: 01_Introduction_to_Azure_Endpoint.ipynb  02_Using_Endpoints_With_llamaindex.ipynb  03_Advanced_Prompting.ipynb  05_simple_retrieval_TFIDF.ipynb  06_semantic_retrieval.ipynb  07_RAG.ipynb  [Answer]05_simple_retrieval_TFIDF.ipynb  [Answer]06_semantic_retrieval.ipynb  [Answer]07_RAG.ipynb
notebooks/day_2/: 02_smolagents.ipynb  03_RAG_Vis_Agent.ipynb  RAG_Vis_Agent.ipynb  [Answer]01_openai_agent.ipynb  [Answer]02_smolagents.ipynb  [Answer]04_smolagents.ipynb
notebooks/day_3/: final_ir_project.ipynb
