[project]
name = "raiffeisen-agentic-ai-training"
version = "0.1.0"
description = "Baseline project for the Agentic RAG Workshop of the Raiffeisen Bank & MSCA"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bm25s>=0.2.14",
    "datasets>=4.4.1",
    "docstring-parser>=0.17.0",
    "fastapi>=0.122.0",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "llama-index>=0.14.8",
    "llama-index-embeddings-azure-openai>=0.4.1",
    "llama-index-llms-azure-openai>=0.4.2",
    "markdown>=3.10",
    "openai>=2.8.1",
    "plotly>=6.5.0",
    "pydantic>=2.12.5",
    "pypdfium2>=5.1.0",
    "pystemmer>=3.0.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "qrcode>=8.2",
    "requests>=2.32.5",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.1.2",
    "smolagents>=1.23.0",
    "sqlalchemy>=2.0.44",
    "tavily-python>=0.7.13",
    "textstat>=0.7.11",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "D",   # pydocstyle (docstrings)
]
ignore = [
    # Google convention prefers summary on the first line; these are commonly disabled:
    "D203", # one-blank-line-before-class (conflicts with D211)
    "D213", # multi-line-summary-second-line
    "D104", # Missing docstring in public package
    "E501", # Line too long
]

[tool.ruff.lint.pydocstyle]
convention = "google"
